adds burger button

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=Layout.css.map */
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+/*# sourceMappingURL=Layout.css.map */
