--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -1,3 +1,5 @@
+$keoRed: #E51A23
+
 .navbar
     height: 150px
     width: 100%
@@ -6,11 +8,69 @@
     align-items: center
     justify-content: space-around
 
-.burger-btn
-    display: none
-
 .desktop, .nav-items
     display: flex
+
+.desktop
+    width: 100%
+    justify-content: space-around
+    input
+        height: 30px
+        width: 250px
+        &:focus
+            outline-color: $keoRed
+
+.menu-btn
+  position: relative
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 80px
+  height: 80px
+  cursor: pointer
+  transition: all .5s ease-in-out
+  /* border: 3px solid #fff */
+  
+.menu-btn__burger
+  width: 50px
+  height: 6px
+  background: #fff
+  border-radius: 5px
+  box-shadow: 0 2px 5px rgba(255,101,47,.2)
+  transition: all .5s ease-in-out
+  
+.menu-btn__burger::before,
+.menu-btn__burger::after
+  content: ''
+  position: absolute
+  width: 50px
+  height: 6px
+  background: #fff
+  border-radius: 5px
+  box-shadow: 0 2px 5px rgba(255,101,47,.2)
+  transition: all .5s ease-in-out
+  
+.menu-btn__burger::before
+  transform: translateY(-16px)
+  
+.menu-btn__burger::after
+  transform: translateY(16px)
+  
+/* ANIMATION */
+.menu-btn.open .menu-btn__burger
+  transform: translateX(-50px)
+  background: transparent
+  box-shadow: none
+  
+.menu-btn.open .menu-btn__burger::before
+  transform: rotate(45deg) translate(35px, -35px)
+  
+.menu-btn.open .menu-btn__burger::after
+  transform: rotate(-45deg) translate(35px, 35px)
+
+// DON'T SHOW IN DESKTOP
+.menu-btn
+    display: none
 
 .nav-items
     width: 600px
@@ -21,9 +81,15 @@
     a
         text-decoration: none
         color: white
+        font-weight: 700
+        transition: color 200ms ease-in-out
+        &:hover
+            color: $keoRed
+            transition: color 200ms ease-in-out
+   
 
 @media (max-width: 900px)
     .desktop
         display: none
-    .burger-btn
-        display: block
+    .menu-btn
+        display: flex
