adds css modules

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,4 +1,4 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
-/*# sourceMappingURL=Layout.css.map */
+/*# sourceMappingURL=Layout.module.css.map */
