--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -1,6 +1,6 @@
 $keoRed: #E51A23
 
-.sidebar
+.Sidebar
     background-color: black
     width: 280px
     position: fixed
@@ -38,11 +38,11 @@ nav
     
 
 @media (min-width: 500px)
-    .sidebar
+    .Sidebar
         display: none
 
-.open
+.Open
     transform: translateX(0)
 
-.close
+.Close
     transform: translateX(-100%)
