--- a/src/components/Navigation/Navbar/Navbar.module.sass
+++ b/src/components/Navigation/Navbar/Navbar.module.sass
@@ -1,6 +1,6 @@
 $keoRed: #E51A23
 
-.navbar
+.Navbar
     height: 150px
     width: 100%
     background-color: black
@@ -8,16 +8,16 @@ $keoRed: #E51A23
     align-items: center
     justify-content: space-around
 
-.desktop, .nav-items
+.Desktop, .NavItems
     display: flex
 
-.desktop
+.Desktop
     width: 100%
     justify-content: space-around
     input
         width: 250px
 
-.menu-btn
+.MenuBtn
   position: relative
   display: flex
   justify-content: center
@@ -28,15 +28,15 @@ $keoRed: #E51A23
   transition: all .5s ease-in-out
   /* border: 3px solid #fff */
   
-.menu-btn__burger
+.MenuBtnBurger
   width: 50px
   height: 6px
   background: #fff
   border-radius: 5px
   transition: all .5s ease-in-out
   
-.menu-btn__burger::before,
-.menu-btn__burger::after
+.MenuBtnBurger::before,
+.MenuBtnBurger::after
   content: ''
   position: absolute
   width: 50px
@@ -45,29 +45,29 @@ $keoRed: #E51A23
   border-radius: 5px
   transition: all .5s ease-in-out
   
-.menu-btn__burger::before
+.MenuBtnBurger::before
   transform: translateY(-16px)
   
-.menu-btn__burger::after
+.MenuBtnBurger::after
   transform: translateY(16px)
   
 /* ANIMATION */
-.menu-btn.open .menu-btn__burger
+.MenuBtn.Open .MenuBtnBurger
   transform: translateX(-50px)
   background: transparent
   box-shadow: none
   
-.menu-btn.open .menu-btn__burger::before
+.MenuBtn.Open .MenuBtnBurger::before
   transform: rotate(45deg) translate(35px, -35px)
   
-.menu-btn.open .menu-btn__burger::after
+.MenuBtn.Open .MenuBtnBurger::after
   transform: rotate(-45deg) translate(35px, 35px)
 
 // DON'T SHOW IN DESKTOP
-.menu-btn
+.MenuBtn
     display: none
 
-.nav-items
+.NavItems
     width: 600px
     margin: 0
     padding: 0
@@ -84,7 +84,7 @@ $keoRed: #E51A23
    
 
 @media (max-width: 900px)
-    .desktop
+    .Desktop
         display: none
-    .menu-btn
+    .MenuBtn
         display: flex
