--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -35,6 +35,9 @@ nav
             &:hover
                 color: $keoRed
                 transition: color 200ms ease-in-out
+        input
+            width: 25px
+            margin: 10px 15px 0 0
     
 
 @media (min-width: 500px)
