--- a/src/containers/Content/Content.module.css
+++ b/src/containers/Content/Content.module.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=Content.module.css.map */
+section {
+  padding: 50px 200px;
+}
+/*# sourceMappingURL=Content.module.css.map */
