--- a/src/components/Navigation/Sidebar/Sidebar.module.css
+++ b/src/components/Navigation/Sidebar/Sidebar.module.css
@@ -56,6 +56,11 @@ nav .NavItems a:hover {
   transition: color 200ms ease-in-out;
 }
 
+nav .NavItems input {
+  width: 25px;
+  margin: 10px 15px 0 0;
+}
+
 @media (min-width: 500px) {
   .Sidebar {
     display: none;
