--- a/src/components/ShopItem/ShopItem.module.sass
+++ b/src/components/ShopItem/ShopItem.module.sass
@@ -3,11 +3,13 @@ $keoRed: #E51A23
     display: inline-block
     box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2)
     width: 250px
-    margin: auto
+    height: 530px
+    margin-bottom: 75px
     text-align: center
     font-family: arial
     img
         width: 250px
+        max-height: 330px
 
 .Price
     color: grey
