--- a/src/components/Navigation/Navbar/Navbar.module.css
+++ b/src/components/Navigation/Navbar/Navbar.module.css
@@ -1,6 +1,7 @@
 .Navbar {
   height: 150px;
   width: 100%;
+  z-index: 2;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -125,7 +126,7 @@
   transition: color 200ms ease-in-out;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1100px) {
   .Desktop {
     display: none;
   }
