--- a/src/components/Navigation/Navbar/Navbar.module.sass
+++ b/src/components/Navigation/Navbar/Navbar.module.sass
@@ -1,8 +1,12 @@
 $keoRed: #E51A23
 
 .Navbar
+    // position: fixed
+    // top: 0
+    // left: 0
     height: 150px
     width: 100%
+    z-index: 2
     background-color: black
     display: flex
     align-items: center
@@ -83,8 +87,8 @@ $keoRed: #E51A23
             transition: color 200ms ease-in-out
    
 
-@media (max-width: 900px)
+@media (max-width: 1100px)
     .Desktop
-        display: none
+      display: none
     .MenuBtn
-        display: flex
+      display: flex
