--- a/src/components/ShopItem/ShopItem.module.css
+++ b/src/components/ShopItem/ShopItem.module.css
@@ -3,13 +3,15 @@
   -webkit-box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
   width: 250px;
-  margin: auto;
+  height: 530px;
+  margin-bottom: 75px;
   text-align: center;
   font-family: arial;
 }
 
 .ShopItem img {
   width: 250px;
+  max-height: 330px;
 }
 
 .Price {
