--- a/src/containers/Content/Content.module.css
+++ b/src/containers/Content/Content.module.css
@@ -1,4 +1,10 @@
 section {
-  padding: 50px 200px;
+  padding: 10px 50px;
+}
+
+@media (min-width: 500px) {
+  section {
+    padding: 50px 200px;
+  }
 }
 /*# sourceMappingURL=Content.module.css.map */
