adds category filter

--- a/src/components/ItemsWrapper/ItemsWrapper.module.sass
+++ b/src/components/ItemsWrapper/ItemsWrapper.module.sass
@@ -1,6 +1,8 @@
 .Grid
     display: grid
     grid-template-columns: 1fr
+    grid-gap: 30px
+    justify-items: center
 
 @media (min-width: 870px)
     .Grid
