--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -2,6 +2,7 @@ $keoRed: #E51A23
 
 .Sidebar
     background-color: black
+    overflow: scroll
     width: 280px
     position: fixed
     max-width: 70%
@@ -17,7 +18,9 @@ input
     height: 30px
 
 nav
-    height: calc(100% - 230px)
+    height: 100%
+    .Arrow
+        color: $keoRed
     .NavItems
         height: 100%
         width: 100%
@@ -27,22 +30,27 @@ nav
         margin: 0
         padding: 0
         list-style: none
-        a
+        a, li
             text-decoration: none
             color: white
             font-weight: 700
-            transition: color 200ms ease-in-out
-            &:hover
-                color: $keoRed
-                transition: color 200ms ease-in-out
+        li.active
+            color: $keoRed
+        .Categories
+            font-weight: 500
+            line-height: 2
         input
             width: 25px
             margin: 10px 15px 0 0
-    
 
 @media (min-width: 1100px)
     .Sidebar
         display: none
+    a, li
+        transition: color 200ms ease-in-out
+        &:hover
+            color: $keoRed
+            transition: color 200ms ease-in-out
 
 .Open
     transform: translateX(0)
