--- a/src/components/ShopItem/ShopItem.module.sass
+++ b/src/components/ShopItem/ShopItem.module.sass
@@ -1,22 +1,26 @@
 $keoRed: #E51A23
+
 .ShopItem
     display: inline-block
     box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2)
     width: 250px
-    height: 530px
-    margin-bottom: 75px
     text-align: center
-    font-family: arial
+    font-family: 'Montserrat', sans-serif
     img
         width: 250px
         max-height: 330px
 
-.Price
+p
+    margin: 0
+
+.Text
     color: grey
     font-size: 22px
-
-p:last-child
-    margin: 0
+    
+.Price
+    font-weight: 700
+    margin: 15px 0
+    color: black
 
 .ShopItem button
     border: none
