--- a/src/components/ItemsWrapper/ItemsWrapper.module.css
+++ b/src/components/ItemsWrapper/ItemsWrapper.module.css
@@ -3,6 +3,8 @@
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
+  grid-gap: 30px;
+  justify-items: center;
 }
 
 @media (min-width: 870px) {
