--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,4 +1,8 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+.NotScrollable {
+  overflow: hidden;
+}
 /*# sourceMappingURL=Layout.module.css.map */
