--- a/src/components/ShopItem/ShopItem.module.sass
+++ b/src/components/ShopItem/ShopItem.module.sass
@@ -9,6 +9,10 @@ $keoRed: #E51A23
     img
         width: 250px
         max-height: 330px
+    span, select
+        margin-bottom: 10px
+    span
+        margin-right: 5px
 
 p
     margin: 0
