added SearchButton & fixed scrolling

--- a/src/components/Navigation/Navbar/Navbar.module.css
+++ b/src/components/Navigation/Navbar/Navbar.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   z-index: 2;
   background-color: black;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
