--- a/src/components/Navigation/Navbar/Navbar.module.sass
+++ b/src/components/Navigation/Navbar/Navbar.module.sass
@@ -8,6 +8,7 @@ $keoRed: #E51A23
     width: 100%
     z-index: 2
     background-color: black
+    overflow: hidden
     display: flex
     align-items: center
     justify-content: space-around
