--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -2,10 +2,10 @@ $keoRed: #E51A23
 
 .Sidebar
     background-color: black
-    overflow: scroll
     width: 280px
     position: fixed
-    max-width: 70%
+    overflow: scroll
+    width: 70%
     height: 100%
     left: 0
     top: 0
@@ -16,9 +16,10 @@ $keoRed: #E51A23
 
 input
     height: 30px
-
+    width: 80%
 nav
     height: 100%
+    overflow: scroll
     .Arrow
         color: $keoRed
     .NavItems
@@ -39,6 +40,10 @@ nav
         .Categories
             font-weight: 500
             line-height: 2
+        .RangeSearch
+            width: 50px
+            height: 20px
+            margin: 10px 15px
         input
             width: 25px
             margin: 10px 15px 0 0
