--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -44,9 +44,14 @@ nav
             width: 50px
             height: 20px
             margin: 10px 15px
-        input
-            width: 25px
-            margin: 10px 15px 0 0
+        .Talles
+            margin-top: 10px
+            display: flex
+            justify-content: space-around
+            text-align: center
+            input[type="radio"]
+                width: 25px
+                display: block
 
 @media (min-width: 1100px)
     .Sidebar
