--- a/src/components/Navigation/Sidebar/Sidebar.module.css
+++ b/src/components/Navigation/Sidebar/Sidebar.module.css
@@ -70,9 +70,19 @@ nav .NavItems .RangeSearch {
   margin: 10px 15px;
 }
 
-nav .NavItems input {
+nav .NavItems .Talles {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-align: center;
+}
+
+nav .NavItems .Talles input[type="radio"] {
   width: 25px;
-  margin: 10px 15px 0 0;
+  display: block;
 }
 
 @media (min-width: 1100px) {
