--- a/src/components/ShopItem/ShopItem.module.sass
+++ b/src/components/ShopItem/ShopItem.module.sass
@@ -1,11 +1,18 @@
 $keoRed: #E51A23
 
 .ShopItem
-    display: inline-block
+    display: flex
+    flex-direction: column
+    justify-content: space-between
     box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2)
     width: 250px
+    height: 550px
     text-align: center
     font-family: 'Montserrat', sans-serif
+    .ImgDiv
+        height: 100%
+        display: flex
+        align-items: center
     img
         width: 250px
         max-height: 330px
