--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -33,7 +33,7 @@ nav
         width: 100%
         display: flex
         flex-direction: column
-        justify-content: space-evenly
+        justify-content: space-between
         margin: 0
         padding: 0
         list-style: none
