--- a/src/components/Navigation/Navbar/Navbar.module.sass
+++ b/src/components/Navigation/Navbar/Navbar.module.sass
@@ -1,26 +1,32 @@
 $keoRed: #E51A23
 
 .Navbar
-    // position: fixed
-    // top: 0
-    // left: 0
-    height: 150px
-    width: 100%
-    z-index: 2
-    background-color: black
-    overflow: hidden
-    display: flex
-    align-items: center
-    justify-content: space-around
+  // position: fixed
+  // top: 0
+  // left: 0
+  height: 150px
+  width: 100%
+  z-index: 2
+  background-color: black
+  overflow: hidden
+  display: flex
+  align-items: center
+  justify-content: space-around
+  
+.MobileCart
+  display: none
+
+i
+  color: white
 
 .Desktop, .NavItems
-    display: flex
+  display: flex
 
 .Desktop
-    width: 100%
-    justify-content: space-around
-    input
-        width: 250px
+  width: 100%
+  justify-content: space-around
+  input
+    width: 250px
 
 .MenuBtn
   position: relative
@@ -69,8 +75,8 @@ $keoRed: #E51A23
   transform: rotate(-45deg) translate(35px, 35px)
 
 // DON'T SHOW IN DESKTOP
-.MenuBtn
-    display: none
+// .MenuBtn
+//     display: none
 
 .NavItems
     width: 600px
@@ -80,15 +86,18 @@ $keoRed: #E51A23
     justify-content: space-between
     a
         text-decoration: none
-        color: white
         font-weight: 700
-        transition: color 200ms ease-in-out
-        &:hover
-            color: $keoRed
-            transition: color 200ms ease-in-out
+        li
+          color: white
+          transition: color 200ms ease-in-out
+          &:hover
+              color: $keoRed
+              transition: color 200ms ease-in-out
    
 
 @media (max-width: 1100px)
+    .MobileCart
+      display: inline-block
     .Desktop
       display: none
     .MenuBtn
