--- a/src/components/Navigation/SearchButton/SearchButton.module.css
+++ b/src/components/Navigation/SearchButton/SearchButton.module.css
@@ -1,13 +1,13 @@
 .SearchButton {
   background-color: #E51A23;
   text-align: center;
-  width: 280px;
   position: fixed;
   overflow: scroll;
   width: 30%;
   height: 6%;
   right: 0;
   top: 150px;
+  font-weight: 500;
   z-index: 1;
   color: white;
   outline: none;
@@ -18,12 +18,6 @@
   transition: transform 300ms ease-out, -webkit-transform 300ms ease-out;
 }
 
-@media (min-width: 1100px) {
-  .SearchButton {
-    display: none;
-  }
-}
-
 .Open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -32,5 +26,24 @@
 .Close {
   -webkit-transform: translateX(170%);
           transform: translateX(170%);
+}
+
+@media (min-width: 1100px) {
+  .SearchButton {
+    width: 13vw;
+    font-size: 20px;
+    height: 50px;
+    left: 20vw;
+    top: 150px;
+    overflow: hidden;
+  }
+  .Open {
+    -webkit-transform: translateY(v);
+            transform: translateY(v);
+  }
+  .Close {
+    -webkit-transform: translateY(-20vw);
+            transform: translateY(-20vw);
+  }
 }
 /*# sourceMappingURL=SearchButton.module.css.map */
