--- a/src/components/Navigation/SearchButton/SearchButton.module.sass
+++ b/src/components/Navigation/SearchButton/SearchButton.module.sass
@@ -3,25 +3,35 @@ $keoRed: #E51A23
 .SearchButton
     background-color: $keoRed
     text-align: center
-    width: 280px
     position: fixed
     overflow: scroll
     width: 30%
     height: 6%
     right: 0
     top: 150px
+    font-weight: 500
     z-index: 1
     color: white
     outline: none
     border: none
     transition: transform 300ms ease-out
 
-@media (min-width: 1100px)
-    .SearchButton
-        display: none
-
 .Open
     transform: translateX(0)
 
 .Close
     transform: translateX(170%)
+
+@media (min-width: 1100px)
+    .SearchButton
+        width: 13vw
+        font-size: 20px
+        height: 50px
+        left: 20vw
+        top: 150px
+        overflow: hidden
+    //     display: none
+    .Open
+        transform: translateY(v)
+    .Close
+        transform: translateY(-20vw)
