--- a/src/components/Navigation/SearchButton/SearchButton.module.css
+++ b/src/components/Navigation/SearchButton/SearchButton.module.css
@@ -16,6 +16,7 @@
   transition: -webkit-transform 300ms ease-out;
   transition: transform 300ms ease-out;
   transition: transform 300ms ease-out, -webkit-transform 300ms ease-out;
+  cursor: pointer;
 }
 
 .Open {
