--- a/src/components/Navigation/SearchButton/SearchButton.module.sass
+++ b/src/components/Navigation/SearchButton/SearchButton.module.sass
@@ -15,6 +15,7 @@ $keoRed: #E51A23
     outline: none
     border: none
     transition: transform 300ms ease-out
+    cursor: pointer
 
 .Open
     transform: translateX(0)
