--- a/src/components/Navigation/Sidebar/Sidebar.module.css
+++ b/src/components/Navigation/Sidebar/Sidebar.module.css
@@ -2,7 +2,7 @@
   background-color: black;
   width: 280px;
   position: fixed;
-  overflow: hidden;
+  overflow: scroll;
   width: 70%;
   height: 100%;
   left: 0;
@@ -33,6 +33,7 @@ nav .Arrow {
   transition: -webkit-transform 300ms ease-out;
   transition: transform 300ms ease-out;
   transition: transform 300ms ease-out, -webkit-transform 300ms ease-out;
+  cursor: pointer;
 }
 
 nav .ArrowClose {
@@ -45,7 +46,7 @@ nav .ArrowOpen {
           transform: rotateZ(90deg);
 }
 
-nav .NavItems {
+.NavItems {
   height: 100%;
   width: 100%;
   display: -webkit-box;
@@ -63,39 +64,40 @@ nav .NavItems {
   list-style: none;
 }
 
-nav .NavItems a, nav .NavItems li {
+.NavItems a, .NavItems li {
   text-decoration: none;
   color: white;
   font-weight: 700;
 }
 
-nav .NavItems li.active {
+.NavItems li.active {
   color: #E51A23;
 }
 
-nav .NavItems .Categories {
+.NavItems .Categories {
   font-weight: 500;
   line-height: 2;
 }
 
-nav .NavItems .Categories li {
+.NavItems .Categories li {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  cursor: pointer;
 }
 
-nav .NavItems .RangeSearch {
+.NavItems .RangeSearch {
   width: 50px;
   height: 15px;
   margin: 10px 15px;
 }
 
-nav .NavItems .RangeSearch:last-child {
+.NavItems .RangeSearch:last-child {
   margin: 0 15px;
 }
 
-nav .NavItems .Talles {
+.NavItems .Talles {
   margin-top: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -105,7 +107,8 @@ nav .NavItems .Talles {
   text-align: center;
 }
 
-nav .NavItems .Talles input[type="radio"] {
+.NavItems .Talles input[type="radio"] {
+  cursor: pointer;
   width: 25px;
   display: block;
 }
@@ -114,6 +117,13 @@ nav .NavItems .Talles input[type="radio"] {
   .Sidebar {
     width: 20vw;
     overflow: scroll;
+  }
+  .Sidebar .NavItems {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .Sidebar .NavItems li {
+    color: white;
   }
   li {
     -webkit-transition: color 100ms ease-in;
@@ -132,7 +142,7 @@ nav .NavItems .Talles input[type="radio"] {
 }
 
 .Close {
-  -webkit-transform: translateX(-20vw);
-          transform: translateX(-20vw);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
 }
 /*# sourceMappingURL=Sidebar.module.css.map */
