--- a/public/normalize.css
+++ b/public/normalize.css
@@ -10,6 +10,9 @@
 
  html {
     line-height: 1.15; /* 1 */
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
     -webkit-text-size-adjust: 100%; /* 2 */
   }
   
@@ -22,6 +25,7 @@
   
   body {
     margin: 0;
+    overflow-x: hidden;
   }
   
   /**
@@ -75,6 +79,8 @@
   
   a {
     background-color: transparent;
+    text-decoration: none;
+    color: black;
   }
   
   /**
