--- a/src/components/Navigation/Navbar/Navbar.module.css
+++ b/src/components/Navigation/Navbar/Navbar.module.css
@@ -1,4 +1,6 @@
 .Navbar {
+  color: white;
+  padding-right: 15px;
   height: 150px;
   width: 100%;
   z-index: 2;
@@ -14,12 +16,34 @@
       justify-content: space-around;
 }
 
-.MobileCart {
-  display: none;
+.Cart {
+  height: 75px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-i {
+.Cart a {
   color: white;
+  text-decoration: none;
+}
+
+.Cart span {
+  font-weight: 700;
+  margin: 10px 0;
+}
+
+.MobileCart {
+  display: none;
 }
 
 .Desktop, .NavItems {
@@ -94,32 +118,33 @@ i {
   margin: 0;
   padding: 0;
   list-style: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-.NavItems a {
+.NavItems li {
+  -webkit-transition: color 200ms ease-in-out;
+  transition: color 200ms ease-in-out;
+}
+
+.NavItems li a {
   text-decoration: none;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  color: white;
   font-weight: 700;
 }
 
-.NavItems a li {
-  color: white;
+.NavItems li a:hover {
+  color: #E51A23;
   -webkit-transition: color 200ms ease-in-out;
   transition: color 200ms ease-in-out;
 }
 
-.NavItems a li:hover {
+.NavItems li a:focus {
   color: #E51A23;
-  -webkit-transition: color 200ms ease-in-out;
-  transition: color 200ms ease-in-out;
 }
 
 @media (max-width: 1100px) {
@@ -140,10 +165,12 @@ i {
             transform: rotate(-45deg) translate(35px, 35px);
   }
   .MobileCart {
-    display: inline-block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     opacity: 1;
   }
-  .MobileCart.NotVisible {
+  .NotVisible {
     opacity: 0;
   }
   .Desktop {
