--- a/src/components/Navigation/SearchButton/SearchButton.module.css
+++ b/src/components/Navigation/SearchButton/SearchButton.module.css
@@ -19,30 +19,42 @@
   cursor: pointer;
 }
 
-.Open {
+.SearchButton:active {
+  opacity: .8;
+}
+
+.SearchButton.Desktop {
+  display: none;
+}
+
+.Open.Mobile {
   -webkit-transform: translateX(0);
           transform: translateX(0);
 }
 
-.Close {
+.Close.Mobile {
   -webkit-transform: translateX(170%);
           transform: translateX(170%);
 }
 
 @media (min-width: 1100px) {
-  .SearchButton {
-    width: 13vw;
+  .SearchButton.Desktop {
+    display: inline-block;
+    width: 11vw;
     font-size: 20px;
     height: 50px;
-    left: 20vw;
+    left: 15vw;
     top: 150px;
     overflow: hidden;
   }
-  .Open {
+  .SearchButton.Mobile {
+    display: none;
+  }
+  .Open.Desktop {
     -webkit-transform: translateY(v);
             transform: translateY(v);
   }
-  .Close {
+  .Close.Desktop {
     -webkit-transform: translateY(-20vw);
             transform: translateY(-20vw);
   }
