--- a/src/components/Navigation/Sidebar/Sidebar.module.css
+++ b/src/components/Navigation/Sidebar/Sidebar.module.css
@@ -115,8 +115,9 @@ nav .ArrowOpen {
 
 @media (min-width: 1100px) {
   .Sidebar {
-    width: 20vw;
-    overflow: scroll;
+    width: 15vw;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
   .Sidebar .NavItems {
     -ms-flex-pack: distribute;
