--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -68,8 +68,9 @@ nav
 
 @media (min-width: 1100px)
     .Sidebar
-        width: 20vw
-        overflow: scroll
+        width: 15vw
+        overflow-y: scroll
+        overflow-x: hidden
         // display: none
         .NavItems
             justify-content: space-around
