--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,8 +1,8 @@
 #KeoLogo {
-  width: 200px;
+  width: 135px;
 }
 
-.LogoHidden {
+.NotVisible {
   opacity: 0;
 }
 /*# sourceMappingURL=Logo.module.css.map */
