--- a/src/components/Navigation/Navbar/Navbar.module.sass
+++ b/src/components/Navigation/Navbar/Navbar.module.sass
@@ -1,45 +1,83 @@
 $keoRed: #E51A23
+$orange: #f6b646
 
 .Navbar
   // position: fixed
   // top: 0
   // left: 0
   color: white
-  padding-right: 15px
-  height: 150px
-  width: 100%
+  padding: 0 200px
+  height: 125px
   z-index: 2
   background-color: black
   overflow: hidden
   display: flex
   align-items: center
-  justify-content: space-around
+  justify-content: space-between
+  a
+    text-align: center
+    color: white
+
+.LeftGroup
+  display: flex
+  align-items: center
+  justify-content: flex-start
+  width: 30%
+  height: 100%
+
+.MiddleGroup
+  // letter-spacing: 1.5px
+  font-size: 18px
+  display: flex
+  width: 60%
+  margin: 0
+  padding: 0
+  list-style: none
+  align-items: center
+  justify-content: space-between
+  li
+    transition: color 200ms ease-in-out
+    a
+      text-decoration: none
+      font-weight: 700
+      &:hover
+        color: $orange
+        transition: color 200ms ease-in-out
+      &:active
+        color: $orange
+
+.RightGroup
+  display: flex
+  align-items: center
+  justify-content: flex-end
+  width: 40%
 
 .Cart
-  height: 75px
+  margin-right: 20px
+  height: 100%
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: space-around
+  justify-content: center
+    // font-weight: 500
+  button
+    padding: 0
   a
-    color: white
     text-decoration: none
+    &:hover
+      color: white
   span
     font-weight: 700
-    margin: 10px 0
-  
+    font-size: 20px
   
 .MobileCart
   display: none
 
-.Desktop, .NavItems
-  display: flex
-
 .Desktop
-  width: 100%
-  justify-content: space-evenly
-  input
-    width: 250px
+  display: flex
+  width: 70%
+  height: 100%
+  // justify-content: space-evenly
 
 .MenuBtn
   position: relative
@@ -75,32 +113,24 @@ $keoRed: #E51A23
 .MenuBtnBurger::after
   transform: translateY(16px)
 
+.NotVisible
+    opacity: 0
 
 // DON'T SHOW IN DESKTOP
 // .MenuBtn
 //     display: none
-
-.NavItems
-    width: 600px
-    margin: 0
-    padding: 0
-    list-style: none
-    align-items: center
-    justify-content: space-between
-    li
-      transition: color 200ms ease-in-out
-      a
-        text-decoration: none
-        color: white
-        font-weight: 700
-        &:hover
-          color: $keoRed
-          transition: color 200ms ease-in-out
-        &:active
-          color: $keoRed
    
 //ON MOBILE
 @media (max-width: 1100px)
+  .Navbar
+    height: 130px
+    padding: 10px 20px 10px 50px
+
+  .LeftGroup
+    height: 100%
+    width: 100%
+    justify-content: space-between
+
   /* ANIMATION */
   .MenuBtn.Open .MenuBtnBurger
     transform: translateX(-50px)
