--- a/src/components/Navigation/SearchButton/SearchButton.module.sass
+++ b/src/components/Navigation/SearchButton/SearchButton.module.sass
@@ -35,10 +35,9 @@ $keoRed: #E51A23
         left: 15vw
         top: 150px
         overflow: hidden
-    //     display: none
     .SearchButton.Mobile
         display: none
     .Open.Desktop
-        transform: translateY(v)
+        transform: translateY(-25px)
     .Close.Desktop
         transform: translateY(-20vw)
