--- a/src/components/Navigation/Sidebar/Sidebar.module.css
+++ b/src/components/Navigation/Sidebar/Sidebar.module.css
@@ -8,7 +8,7 @@
   left: 0;
   top: 0;
   z-index: 1;
-  padding: 0 32px 40px;
+  padding: 40px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-transition: -webkit-transform 300ms ease-out;
@@ -17,9 +17,18 @@
   transition: transform 300ms ease-out, -webkit-transform 300ms ease-out;
 }
 
+.Sidebar .Logo {
+  margin-bottom: 20px;
+}
+
+a, li, .NavLinkItem {
+  color: white;
+}
+
 input {
   height: 30px;
   width: 80%;
+  outline-width: 0;
 }
 
 nav {
@@ -56,9 +65,9 @@ nav .ArrowOpen {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -66,12 +75,20 @@ nav .ArrowOpen {
 
 .NavItems a, .NavItems li {
   text-decoration: none;
-  color: white;
   font-weight: 700;
 }
 
 .NavItems li.active {
   color: #E51A23;
+}
+
+.NavItems .CategoriesFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .NavItems .Categories {
@@ -114,6 +131,9 @@ nav .ArrowOpen {
 }
 
 @media (min-width: 1100px) {
+  .LoginBtn {
+    display: none;
+  }
   .Sidebar {
     width: 15vw;
     overflow-y: scroll;
@@ -125,6 +145,10 @@ nav .ArrowOpen {
   }
   .Sidebar .NavItems li {
     color: white;
+  }
+  .Sidebar .RangeSearch {
+    width: 70px;
+    height: 20px;
   }
   li {
     -webkit-transition: color 100ms ease-in;
