--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -10,13 +10,20 @@ $keoRed: #E51A23
     left: 0
     top: 0
     z-index: 1
-    padding: 0 32px 40px
+    padding: 40px
     box-sizing: border-box
     transition: transform 300ms ease-out
+    .Logo
+        margin-bottom: 20px
+
+
+a, li, .NavLinkItem
+    color: white
 
 input
     height: 30px
     width: 80%
+    outline-width: 0
 nav
     height: 100%
     overflow: hidden
@@ -34,16 +41,18 @@ nav
     width: 100%
     display: flex
     flex-direction: column
-    justify-content: space-between
+    justify-content: space-evenly
     margin: 0
     padding: 0
     list-style: none
     a, li
         text-decoration: none
-        color: white
         font-weight: 700
     li.active
         color: $keoRed
+    .CategoriesFlex
+        display: flex
+        align-items: center
     .Categories
         font-weight: 500
         line-height: 2
@@ -67,6 +76,8 @@ nav
             display: block
 
 @media (min-width: 1100px)
+    .LoginBtn
+        display: none
     .Sidebar
         width: 15vw
         overflow-y: scroll
@@ -76,6 +87,9 @@ nav
             justify-content: space-around
             li
                 color: white
+        .RangeSearch
+            width: 70px
+            height: 20px
                 
     li
         transition: color 100ms ease-in
