--- a/src/components/ShopItem/ShopItem.module.css
+++ b/src/components/ShopItem/ShopItem.module.css
@@ -12,7 +12,7 @@
   -webkit-box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
   width: 250px;
-  height: 550px;
+  height: 450px;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
 }
@@ -56,18 +56,23 @@ p {
 }
 
 .ShopItem button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  text-align: center;
   border: none;
   outline: 0;
   padding: 12px;
   color: white;
   background-color: #000;
-  text-align: center;
   cursor: pointer;
-  width: 100%;
   font-size: 18px;
-}
-
-.ShopItem button:hover {
-  opacity: .7;
 }
 /*# sourceMappingURL=ShopItem.module.css.map */
