--- a/src/components/ShopItem/ShopItem.module.sass
+++ b/src/components/ShopItem/ShopItem.module.sass
@@ -6,7 +6,7 @@ $keoRed: #E51A23
     justify-content: space-between
     box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2)
     width: 250px
-    height: 550px
+    height: 450px
     text-align: center
     font-family: 'Montserrat', sans-serif
     .ImgDiv
@@ -34,16 +34,19 @@ p
     color: black
 
 .ShopItem button
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+    text-align: center
     border: none
     outline: 0
     padding: 12px
     color: white
     background-color: #000
-    text-align: center
     cursor: pointer
-    width: 100%
     font-size: 18px
 
-.ShopItem button:hover
-    opacity: .7
+// .ShopItem button:hover
+//     opacity: .7
     
