--- a/normalize.css
+++ b/normalize.css
@@ -11,6 +11,8 @@
  html {
     line-height: 1.15; /* 1 */
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
     -webkit-text-size-adjust: 100%; /* 2 */
   }
   
@@ -78,7 +80,7 @@
   a {
     background-color: transparent;
     text-decoration: none;
-    color: black;
+    color: white;
   }
   
   /**
