--- a/src/components/ItemsWrapper/ItemsWrapper.module.css
+++ b/src/components/ItemsWrapper/ItemsWrapper.module.css
@@ -18,8 +18,8 @@
   .Grid {
     -ms-grid-columns: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
-    -ms-grid-rows: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
   }
 }
 /*# sourceMappingURL=ItemsWrapper.module.css.map */
