--- a/src/components/ItemsWrapper/ItemsWrapper.module.sass
+++ b/src/components/ItemsWrapper/ItemsWrapper.module.sass
@@ -11,4 +11,4 @@
 @media (min-width: 1100px)
     .Grid
         grid-template-columns: 1fr 1fr 1fr
-        grid-template-rows: 1fr 1fr 1fr 1fr
+        grid-template-rows: 1fr 1fr
